[project]
name = "fastdatetime"
version = "0.1.0"
description = "Like datetime, but fast"
keywords = ["datetime", "parsing", "iso8601", "rfc3339"]
requires-python = ">=3.7"
readme = "README.md"
license = "MIT OR Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.urls]
homepage = "github.com/m1so/fastdatetime"
repository = "github.com/m1so/fastdatetime"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"